--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -17,7 +17,7 @@
       </ul>
     </div>
     <div>
-      <button mat-mini-fab color="primary">
+      <button mat-mini-fab color="primary" (click)="openSearchDialog()">
         <mat-icon>search</mat-icon>
       </button>
     </div>
