--- a/src/app/views/pages/landingpage/landingpage.component.html
+++ b/src/app/views/pages/landingpage/landingpage.component.html
@@ -1,1 +1,14 @@
 <app-header></app-header>
+<div class="container mt-4">
+
+  <carousel *ngIf="images.length>0" style="z-index: 1"
+            [images]="images"
+            [objectFit]="'cover'"
+            [cellWidth]="'100%'"
+            [height]="800"
+            [arrowsOutside]="true"
+            [autoplay]="true"
+            [dots]="true"
+            [loop]="true">
+  </carousel>
+</div>
